Add 'main' to .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ local.properties
 *.vspscc
 .builds
 *.dotCover
+main
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
 #packages/
